manifests/carts-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-api
  namespace: go-mall
  labels:
    app: go-mall
    service: carts-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-mall
      service: carts-api
  template:
    metadata:
      labels:
        app: go-mall
        service: carts-api
    spec:
      containers:
        - name: carts-api
          image: swr.cn-south-1.myhuaweicloud.com/jjzzchtt/go-mall:latest
          command: [ "/app/apis/Carts", "-f", "/app/etc/carts-api.prod.yaml" ]
          ports:
            - containerPort: 8003  # API服务端口
            - containerPort: 8103  # 监控端口
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 800m
              memory: 512Mi
          volumeMounts:
            - mountPath: /app/logs
              name: app-logs
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8103
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8103
            initialDelaySeconds: 5
            periodSeconds: 10
          imagePullPolicy: IfNotPresent
      volumes:
        - name: app-logs
          hostPath:
            path: /app/logs
            type: DirectoryOrCreate

---
# carts-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts-api
  namespace: go-mall
spec:
  selector:
    app: go-mall
    service: carts-api
  ports:
    - name: carts-api
      port: 8003
      targetPort: 8003

      protocol: TCP
    - name: carts-api-metrics
      port: 8103
      targetPort: 8103
      protocol: TCP
  type: ClusterIP
