manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-mall-ingress
  namespace:  go-mall
spec:
  rules:
    - host: nginx.kubernetes-devops.cn
      http:
        paths:
          - path: /douyin/user/
            pathType: ImplementationSpecific
            backend:
              service:
                name: auths-api-stable # 对应service
                port:
                  number: 8888
